# flare

./: .gitignore  .markdownlint.json  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  future_spec.md  grammar.gram  op.txt  spec.md  test.c  todo
allegro/: 1.alg  Cargo.toml  a.out  algc.sh  asdf.json  binary_trees.alg  buildgram.sh  comp.sh  container.alg  demo.bc  grammar.ebnf  grammer.w3c-ebnf  idea.alg  idea.txt  lang.gram  ntest  ntest.alg  ntest.alg.json  ntest.alg.ll  op.txt  other.alg  player.alg  res.txt  result.alg  slice.alg  str.alg  test.alg  test.alg.c  test.txt  test2.alg
allegro/examples/: binary_trees copy.alg  binary_trees.alg  binary_trees.alg.json  booleans.alg  container.alg  microgrep.alg  ntest.alg  ntest.alg.json  option.alg  player.alg  slice.alg  str.alg
allegro/src/: lang.def  main.rs
allegro/src/core/: ast.rs  lexing.rs  mod.rs  processing.rs  tokens.rs
allegro/src/core/errors/: lexingerror.rs  mod.rs  parsingerr.rs
allegro/src/core/passes/: analyze.rs  lexing.rs  mod.rs  parsing.rs
allegro/src/core/passes/backend/: codegen.rs
allegro/src/core/passes/frontend/: analyze.rs  lexing.rs  parsing.rs
allegro/src/core/passes/midend/: collapse.rs  mod.rs  typechecking.rs
allegro/src/core/resource/: ast.rs  environment.rs  errors.rs  lexemes.rs  mod.rs  output.rs  states.rs  table.rs  tokens.rs
allegro/src/root/: mod.rs
allegro/src/root/legacy_resource/: ast.rs  environment.rs  lexemes.rs  mod.rs  output.rs  tokens.rs
allegro/src/root/passes/: mod.rs  parser.rs
allegro/src/root/passes/backend/: codegen.rs
allegro/src/root/passes/frontend/: analyze.rs  lang.rs  lexing.rs  mod.rs  parsing.rs  translate.rs
allegro/src/root/passes/legacy_backend/: codegen.rs
allegro/src/root/passes/legacy_frontend/: analyze.rs  lexing.rs  mod.rs  parsing.rs
allegro/src/root/passes/midend/: environment.rs  mod.rs  symboltable.rs  typechecking.rs
allegro/src/root/resource/: ast.rs  environment.rs  errors.rs  itypes.rs  lex.rs  lexemes.rs  mod.rs  output.rs  tk.rs  tokens.rs
allegro/tests/typechecking/functions/: functionstest.alg  functionstest.alg.json
allegro/tests/typechecking/primatives/: primativetest.alg.json
flare/: .debtmap.toml  Cargo.toml  a.out  build.py  build.rs.old  build.sh  grammar.bnf  justfile  log.txt  miri_out.txt  ntest  ntest.s  output.txt  queens.flr  res.txt  rustfmt.toml  test  test.c  test.ll
flare/archive/: booleans.flr  container.flr  io.flr  lambdacalc.flr  microgrep.flr  mutually_recursive.flr  option.flr  player.flr  result.flr  slice.flr  test.txt
flare/benches/: typechecker_benchmark.rs
flare/demoproj/: main.flr
flare/docs/Flare/: Antipatterns.md  Calculus of Constructions.md  Force Positions.md  Function syntax.md  Grammar.md  Idioms.md  Memory.md  Packages.md  Principles.md  Sample.md  Scoping.md  Semantic Design.md  Standard Library Features.md  State and Expressions.md  Syntax Design.md  System Design.md  Toll Example.md  Type Semantics.md  Type System Ideas.md  Volatile and FFI.md
flare/docs/Flare/.obsidian/: community-plugins.json  graph.json  workspace-mobile.json  workspace.json
flare/docs/Flare/.obsidian/plugins/obsidian-linter/: data.json
flare/examples/: atype.flr  billing.flr.1  binary_trees.flr  c.flr  container.flr  factorial.flr  functions.flr1  game.flr  identity.flr  identity.flr.1  io.flr  iter.flr.1  lambdacalc.flr  lamdacalc.flr  list.flr  math.flr  math.flr.1  microgrep.flr  ntest  ntest copy 2.flr  ntest copy.flr  ntest.ast  ntest.bc  ntest.flr  ntest.flr.2  ntest.flr.3  ntest.flr.funcs  ntest.flr.ssa  ntest.flr1  ntest.ir  ntest.ir-pure  ntest.lir  ntest.ll  ntest.ll.ll  ntest.s  option.flr  option.flr.1  player.flr  result.flr  slice.flr  (+4 more)
flare/flare_internals/: Cargo.toml  test_grammar.ebnf
flare/flare_internals/benches/: environment_benches.rs  master_benches.rs  typechecker_benchmark.rs
flare/flare_internals/benches/bench_code/: bench1.flr
flare/flare_internals/benches/bench_code/gauntlet/: gauntlet.flr
flare/flare_internals/src/: lib.rs
flare/flare_internals/src/passes/: mod.rs  parser.rs
flare/flare_internals/src/passes/backend/: c.rs  flatten.rs  gen.rs  gen.rs.1  lir.rs  mod.rs  reduce.rs  target.rs
flare/flare_internals/src/passes/backend/lir/: mod.rs
flare/flare_internals/src/passes/backend/lowering/: ir.rs  lower_ast.rs  lower_types.rs  mod.rs  subst.rs
flare/flare_internals/src/passes/backend/monomorph/: mod.rs
flare/flare_internals/src/passes/backend/simplify/: mod.rs
flare/flare_internals/src/passes/frontend/: environment.rs  matchmatrix.rs  mod.rs  parser.rs  resolution.rs  typechecker.rs
flare/flare_internals/src/passes/frontend/typing/: check.rs  infer.rs  inst.rs  mod.rs  rows.rs  subst.rs  types.rs  (+1 more)
flare/flare_internals/src/passes/midend/: environment.rs  mod.rs  reduce.rs  resolution.rs  transformation.rs  typechecker.rs  typechecking.rs
flare/flare_internals/src/resource/: errors.rs  mod.rs  rep.rs  tk.rs
flare/flare_internals/src/resource/pretty/: ir.rs  mod.rs  type.rs
flare/flare_internals/src/resource/rep/: ast.rs  common.rs  concretetypes.rs  entry.rs  files.rs  mir.rs  mod.rs  quantifier.rs  types.rs
flare/flare_internals/std/: seq.flr
flare/flare_internals/tests/: environment_tests.rs
flare/flare_internals_tests/: Cargo.toml
flare/flare_internals_tests/src/: lib.rs
flare/flarec/: Cargo.toml
flare/flarec/src/: main.rs
flare/flarec/src/root/: mod.rs
flare/flarec/src/root/passes/: parser.rs  parser.rs.old
flare/flarec/src/root/resource/: mod.rs  rep.rs
flare/src/: flare.l  flare.y  flare.y.old  main.rs  toaad
flare/src/root/: mod.rs
flare/src/root/passes/: mod.rs  other_chumsky_parser.rs.old  parser.rs
flare/src/root/passes/backend/: flatten.rs  gen.rs  mod.rs
flare/src/root/passes/midend/: environment.rs  mod.rs  typechecking.rs
flare/src/root/resource/: ast.rs  cst.rs  db.rs  errors.rs  lex.rs  mod.rs  rep.rs  tk.rs
flare/stdlib/: c_lib.c
flare/tests/: project_single.flr
flare/tests/typechecking/functions/: functionstest.alg
flare/tests/typechecking/primatives/: primativetest.alg
(+54 files in other folders)
