[package]
name = "allegro"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
lazy_static = "1.4.0"
logos = "0.14.0"
pomelo = "0.1.5"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
# codegen_units = 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
