[package]
name = "flare"
version = "0.1.0"
edition = "2021"

[build-dependencies]
#cfgrammar = "0.13.10"
#lrlex = "0.13"
#lrpar = "0.13"

[dependencies]
anyhow = "1.0.94"
ariadne = {version = "0.5.1", features = ["auto-color"] }
bnf = "0.5.0"
chumsky = {version = "0.10.1", features = ["pratt", "memoization", "extension"] }
itertools = "0.13.0"
#lazy_static = "1.4.0"
ordered-float = { version = "4.5.0", features = ["serde"] }
qbe = "2.3.0"
radix_trie = "0.3.0"
serde = {version = "1.0.210", features = ["derive"]}
thiserror = "2.0.7"
typed-builder = "0.21.2"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
