[workspace]
resolver = "3"
members = ["flarec", "flare_internals", "flare_internals_tests"]

[profile.release]
opt-level = 3
codegen-units = 1
#debug = false # disable for release
strip = "symbols"
lto = "thin"

[profile.bench]
opt-level = 3
codegen-units = 1
debug = true
strip = "none"
lto = "thin"

[profile.dev.package."*"]
opt-level = 3
