[package]
name = "flare_internals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
ariadne = {version = "0.5.1", features = ["auto-color"] }
chumsky = {version = "0.10.1", features = ["pratt", "memoization", "extension"] }
itertools = "0.13.0"
log = "0.4.28"
ordered-float = { version = "4.5.0", features = ["serde"] }
petgraph = "0.8.3"
qbe = "2.3.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = {version = "1.0.210", features = ["derive", "rc"]}
thiserror = "2.0.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "typechecker_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
