[package]
name = "flarec"
version = "0.1.0"
edition = "2024"
description = "Compiler for the flare language"

[dependencies]
flare_internals = { path = "../flare_internals" }
#bnf = "0.5.0"
clap = { version = "4.5.54", features = ["derive", "cargo"] }
# backtrace-on-stack-overflow = "0.3.0"
pretty_env_logger = "0.5.0"
log = "0.4.28"

[[bin]]
name = "flarec"
bench = false
